...
                    app:layout_constraintEnd_toEndOf="parent">

                </Button>
            </FrameLayout>

            <EditText
                android:id="@+id/event_title_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/light_grey_rounded_background"
                android:hint="Title of Event"
                android:layout_marginTop="15dp"
                android:textSize="24sp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <DatePicker
                    android:id="@+id/event_date_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarTextColor="@color/white"
                    android:datePickerMode="calendar"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:startYear="2024"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">
                </DatePicker>

                <TimePicker
                    android:id="@+id/event_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">
                </TimePicker>
...

            </androidx.constraintlayout.widget.ConstraintLayout>



            <EditText
                android:id="@+id/event_location_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/light_grey_rounded_background"
                android:hint="Location"
                android:textSize="18sp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <DatePicker
                    android:id="@+id/event_open_date_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarTextColor="@color/white"
                    android:datePickerMode="calendar"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:startYear="2024"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">
                </DatePicker>

                <TimePicker
                    android:id="@+id/event_open_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">
                </TimePicker>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <DatePicker
                    android:id="@+id/event_close_date_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarTextColor="@color/white"
                    android:datePickerMode="calendar"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:startYear="2024"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">
                </DatePicker>

                <TimePicker
                    android:id="@+id/event_close_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">
                </TimePicker>
...
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp">

        <android.widget.Button
            android:id="@+id/create_event_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/login_user_type_button_selected"
            android:text="Create Event"
            android:textAlignment="center"
            android:textAllCaps="false"
...
