<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".ui.myprofile.MyProfileFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="top"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="204dp"
        android:layout_gravity="center">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_relativeLayout3"
            android:layout_width="145dp"
            android:layout_height="145dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_alignTop="@+id/icon_initials"
                android:layout_alignBottom="@+id/icon_initials"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_rectangle_filled">
            </RelativeLayout>


            <TextView
                android:id="@+id/icon_initials"
                android:layout_width="145dp"
                android:layout_height="125dp"
                android:layout_marginTop="10dp"
                android:padding="5sp"
                android:scaleType="fitXY"
                android:text="JL"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/user_image_profile_screen"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:scaleType="centerCrop">
            </ImageView>
        </com.google.android.material.card.MaterialCardView>


        <Button
            android:id="@+id/upload_user_image_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </Button>

        <Button
            android:id="@+id/delete_user_image_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="Delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="First Name"
        android:textSize="22sp"
        android:textColor="#b4f0ee">
    </TextView>

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/light_grey_rounded_background"
        android:text=""
        android:textSize="24sp"
        android:padding="10dp">
    </EditText>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Last Name"
        android:textSize="22sp"
        android:textColor="#b4f0ee">
    </TextView>

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/light_grey_rounded_background"
        android:text=""
        android:textSize="24sp"
        android:padding="10dp">
    </EditText>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Email"
        android:textSize="22sp"
        android:textColor="#b4f0ee">
    </TextView>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/light_grey_rounded_background"
        android:text=""
        android:textSize="18sp"
        android:padding="10dp">
    </EditText>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Phone Number (optional)"
        android:textSize="22sp"
        android:textColor="#b4f0ee">
    </TextView>

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/light_grey_rounded_background"
        android:textSize="24sp"
        android:padding="10dp"
        android:inputType="phone">
    </EditText>



</LinearLayout>

<android.widget.Button
    android:id="@+id/save_button"
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="15dp"
    android:layout_height="50dp"
    android:background="@drawable/login_user_type_button_selected"
    android:text="Save Changes"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textSize="25sp" />

</FrameLayout>