<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_events"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="My Events" />
        <item
            android:id="@+id/event_finder"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="Event Finder" />
        <item
            android:id="@+id/my_profile"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="My Profile" />
        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Settings" />
        <item
            android:id="@+id/facility_information"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="Facility Information" />
        <item
            android:id="@+id/browse_events"
            android:icon="@android:drawable/ic_menu_view"
            android:title="Browse Events" />
        <item
            android:id="@+id/browse_users"
            android:icon="@android:drawable/ic_menu_view"
            android:title="Browse Users" />
        <item
            android:id="@+id/browse_images"
            android:icon="@android:drawable/ic_menu_view"
            android:title="Browse Images" />
    </group>
</menu>