<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:background="@color/primary"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/settings_notifications_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Notifications"
            android:textAlignment="viewStart"
            android:textColor="#b4f0ee"
            android:textSize="22sp" />

        <Button
            android:id="@+id/settings_notify_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/vomitGreen"
            android:drawableRight="@drawable/checkmark"
            android:text="I would like to recieve notifications from organizers and admins"
            android:textAlignment="viewStart"
            android:textAllCaps="false" />

    </LinearLayout>

</FrameLayout>